[package]
name = "actix-web-rest-macros"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
desciption = "Macros for actix-web-rest."
documentation = "https://docs.rs/actix-web-rest-macros"
repository = "https://github.com/negrel/actix-web-rest"
readme = "../README.md"
keywords = ["web"]

[lib]
name = "actix_web_rest_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { workspace = true }
serde = { workspace = true }
quote = "1"
syn = "2"
strum_macros = { version = "0.24" }
proc-macro2 = "1.0.60"
