[package]
name = "actix-web-rest"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
documentation = "https://docs.rs/actix-web-rest"


[lib]
name = "actix_web_rest"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-rest-macros = { version = "0.2.0" }
actix-web = "4"
http = "0.2"
serde = "1"
strum = { version = "0.24", features = ["derive"] }
