[package]
name = "actix-web-rest"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
documentation = "https://docs.rs/actix-web-rest"


[lib]
name = "actix_web_rest"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { workspace = true }
serde = { workspace = true }
# actix-web-rest-macros = { path = "../actix-web-rest-macros/" }
actix-web-rest-macros = { version = "0.3.0" }
anyhow = "1"
actix-web = "4"
utoipa = "3"
