[package]
name = "enum-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-rest = { path = "../../actix-web-rest/" }
anyhow = "1.0.71"
serde = "1.0.164"
thiserror = "1.0.40"

